SEO Implementation: Unique meta tags for 13 pages, sitemap.xml, robots.txt, header optimization, and brand favicon

--- a/builders.html
+++ b/builders.html
@@ -4,7 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UNIVERSE BUILDERS & BUILDING MAINTENANCE - Rajapalayam</title>
+    <title>Universe Builders | Premium Construction & Engineering Services Rajapalayam</title>
+    <meta name="description"
+        content="Expert construction and building maintenance services in Rajapalayam. Universe Builders offers quality residential and commercial civil engineering solutions.">
+    <meta name="keywords"
+        content="Construction Rajapalayam, Builders Rajapalayam, Building Maintenance, Civil Engineering, Universe Builders">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://universebuilders.in/builders.html">
+    <meta property="og:title" content="Universe Builders | Construction Excellence">
+    <meta property="og:description"
+        content="Bringing your dream structures to life with quality and precision in Rajapalayam.">
+    <meta property="og:image" content="https://universebuilders.in/assets/engineering-bg.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
