--- a/child-plans.html
+++ b/child-plans.html
@@ -4,7 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Child Insurance Plans - UNIVERSE INSURANCE</title>
+    <title>SBI Life Child Future Plans | Universe Insurance Rajapalayam</title>
+    <meta name="description"
+        content="Secure your child's education and dreams with SBI Life Child Plans. Explore Smart Scholar and Future Star at Universe Insurance & Investment Services.">
+    <meta name="keywords"
+        content="SBI Life Child Plans, Education Insurance, Smart Scholar SBI, Child Future Security Rajapalayam">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://universebuilders.in/child-plans.html">
+    <meta property="og:title" content="SBI Life Child Plans | Empower Their Dreams">
+    <meta property="og:description" content="Build a secure corpus for your child's milestones proactively.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
