--- a/group-loan-protection-plans.html
+++ b/group-loan-protection-plans.html
@@ -4,7 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Group Loan Protection Plans - UNIVERSE INSURANCE</title>
+    <title>SBI Life Group Loan Protection | Universe Insurance Rajapalayam</title>
+    <meta name="description"
+        content="Protect your family from loan liabilities with SBI Life RiNn Raksha. Group loan protection solutions at Universe Insurance & Investment Services.">
+    <meta name="keywords"
+        content="SBI Life RiNn Raksha, Loan Protection Insurance, Credit Life Insurance Rajapalayam, Universe Insurance">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://universebuilders.in/group-loan-protection-plans.html">
+    <meta property="og:title" content="SBI Life Loan Protection | Secure Your Liabilities">
+    <meta property="og:description" content="Ensure your debt doesn't become a burden for your family.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
