--- a/group-micro-plans.html
+++ b/group-micro-plans.html
@@ -4,7 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Group Micro Insurance Plans - UNIVERSE INSURANCE</title>
+    <title>SBI Life Group Micro Insurance | Universe Insurance Rajapalayam</title>
+    <meta name="description"
+        content="Affordable micro-insurance for small groups and informal sectors. Explore Group Micro Shield at Universe Insurance & Investment Services.">
+    <meta name="keywords"
+        content="SBI Life Micro Insurance, Group Micro Shield, Affordable Insurance Rajapalayam, Universe Insurance">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://universebuilders.in/group-micro-plans.html">
+    <meta property="og:title" content="SBI Life Group Micro Insurance | Affordable Security">
+    <meta property="og:description"
+        content="Reassuring financial security for informal groups and small lender schemes.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
