--- a/insurance.html
+++ b/insurance.html
@@ -4,7 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UNIVERSE INSURANCE & INVESTMENTS</title>
+    <title>SBI Life Insurance Rajapalayam | Universe Insurance & Investment</title>
+    <meta name="description"
+        content="Authorized SBI Life Insurance services in Rajapalayam. Explore life insurance, savings, and investment plans at Universe Insurance & Investment Services.">
+    <meta name="keywords"
+        content="SBI Life Insurance, Insurance Rajapalayam, Investment Services, Universe Insurance, Life Insurance Plans">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://universebuilders.in/insurance.html">
+    <meta property="og:title" content="Universe Insurance | SBI Life Protection">
+    <meta property="og:description"
+        content="Secure your family's future with SBI Life Insurance. expert advice and personalized plans in Rajapalayam.">
+    <meta property="og:image" content="https://universebuilders.in/assets/sbi-life-ad.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -816,8 +829,7 @@
 
     <section class="hero" id="home">
         <div class="hero-content">
-            <div class="hero-ofer-badge">Secure Your Family's Future</div>
-            <!-- Removed Life Insurance Corporation of India -->
+            <h1 style="font-size: clamp(2rem, 5vw, 3rem); margin-bottom: 1rem;">SBI Life Insurance Services</h1>
             <p>Trust. Transparency. Togetherness. Comprehensive Life Insurance and Investment Solutions.</p>
             <a href="#categories" class="btn">Explore Plan Categories</a>
         </div>
