--- a/online-plans.html
+++ b/online-plans.html
@@ -4,7 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Insurance Plans - UNIVERSE INSURANCE</title>
+    <title>SBI Life Online Insurance Plans | Fast & Secure Protection</title>
+    <meta name="description"
+        content="Buy SBI Life insurance online with ease. Explore Smart Shield, eWealth Plus, and other digital plans for instant protection and growth.">
+    <meta name="keywords" content="Online Insurance, SBI Life Online, Smart Shield, eWealth Plus, Buy Insurance Online">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://universebuilders.in/online-plans.html">
+    <meta property="og:title" content="SBI Life Online Plans | Instant Coverage">
+    <meta property="og:description"
+        content="Secure your future digitally. High-value protection and wealth plans available online.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
