--- a/protection-plans.html
+++ b/protection-plans.html
@@ -4,7 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Protection Insurance Plans - UNIVERSE INSURANCE</title>
+    <title>SBI Life Protection & Term Insurance | Universe Insurance Rajapalayam</title>
+    <meta name="description"
+        content="Get comprehensive life coverage with SBI Life Protection Plans. Explore Term Insurance, Smart Shield, and more at Universe Insurance Rajapalayam.">
+    <meta name="keywords"
+        content="SBI Life Protection, Term Insurance Rajapalayam, Smart Shield SBI, Life Cover Universe Insurance">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://universebuilders.in/protection-plans.html">
+    <meta property="og:title" content="SBI Life Protection | Secure Your Family">
+    <meta property="og:description" content="Affordable term insurance for total financial peace of mind.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
