--- a/retirement-plans.html
+++ b/retirement-plans.html
@@ -4,7 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retirement & Pension Insurance Plans - UNIVERSE INSURANCE</title>
+    <title>SBI Life Retirement & Pension Plans | Universe Insurance Rajapalayam</title>
+    <meta name="description"
+        content="Plan for a stress-free retired life with SBI Life Retirement Plans. Explore Annuity, Pension, and Retire Smart solutions at Universe Insurance.">
+    <meta name="keywords"
+        content="SBI Life Retirement, Pension Plans Rajapalayam, Retire Smart SBI, Annuity Plans Universe Insurance">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://universebuilders.in/retirement-plans.html">
+    <meta property="og:title" content="SBI Life Retirement Plans | Lifelong Income">
+    <meta property="og:description" content="Secure your sunset years with guaranteed regular income and pension.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
