--- a/saving-plans.html
+++ b/saving-plans.html
@@ -4,7 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saving Insurance Plans - UNIVERSE INSURANCE</title>
+    <title>SBI Life Saving Plans | Universe Insurance Rajapalayam</title>
+    <meta name="description"
+        content="Explore SBI Life Saving Plans for guaranteed returns and periodic income. Secure your family's financial future with Universe Insurance & Investment Services.">
+    <meta name="keywords"
+        content="SBI Life Savings, Saving Plans Rajapalayam, Guaranteed Return Plans, Universe Insurance">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://universebuilders.in/saving-plans.html">
+    <meta property="og:title" content="SBI Life Saving Plans | Protection & Growth">
+    <meta property="og:description" content="Secure your future with SBI Life's high-yield saving plans.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
