--- a/wealth-creation-plans.html
+++ b/wealth-creation-plans.html
@@ -4,7 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wealth Creation Insurance Plans - UNIVERSE INSURANCE</title>
+    <title>SBI Life Wealth Creation & ULIP Plans | Universe Insurance Rajapalayam</title>
+    <meta name="description"
+        content="Maximize your investment returns with SBI Life Wealth Creation plans. Explore ULIP, Market-linked returns, and Life Cover at Universe Insurance.">
+    <meta name="keywords"
+        content="SBI Life ULIP, Wealth Creation Plans, Market Linked Returns, Universe Insurance Rajapalayam">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://universebuilders.in/wealth-creation-plans.html">
+    <meta property="og:title" content="SBI Life Wealth Creation | Market Linked Growth">
+    <meta property="og:description" content="Grow your wealth while staying protected with premium ULIP solutions.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
