--- a/corporate-solutions-plans.html
+++ b/corporate-solutions-plans.html
@@ -4,7 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Corporate & Group Insurance Solutions - UNIVERSE INSURANCE</title>
+    <title>SBI Life Corporate & Group Insurance | Universe Insurance Rajapalayam</title>
+    <meta name="description"
+        content="Professional group insurance solutions for corporate clients at Universe Insurance. Gratuity, Superannuation, and PMJJBY schemes available.">
+    <meta name="keywords"
+        content="Group Insurance Rajapalayam, SBI Life Corporate, PMJJBY, Employee Benefits Universe Insurance">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://universebuilders.in/corporate-solutions-plans.html">
+    <meta property="og:title" content="SBI Life Corporate Solutions | Group Protection">
+    <meta property="og:description" content="Comprehensive insurance benefits for formal and informal groups.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
