--- a/money-back-plans.html
+++ b/money-back-plans.html
@@ -4,7 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Money Back Income Insurance Plans - UNIVERSE INSURANCE</title>
+    <title>SBI Life Money Back Income Plans | Universe Insurance Rajapalayam</title>
+    <meta name="description"
+        content="Get periodic payouts and life coverage with SBI Life Money Back plans. Explore Smart Money Back solutions at Universe Insurance & Investment Services.">
+    <meta name="keywords"
+        content="SBI Life Money Back, Income Plans Rajapalayam, Periodic Payouts, Money Back Insurance">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://universebuilders.in/money-back-plans.html">
+    <meta property="og:title" content="SBI Life Money Back Plans | Steady Income">
+    <meta property="og:description" content="Enjoy periodic cash benefits and continuous life insurance protection.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
