Integrate WhatsApp messaging for all 45 insurance plans across 10 category pages

--- a/group-loan-protection-plans.html
+++ b/group-loan-protection-plans.html
@@ -543,7 +543,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Continue Your Application</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20RiNn%20Raksha.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Continue Your Application</a>
                 </div>
             </div>
         </div>
