--- a/online-plans.html
+++ b/online-plans.html
@@ -540,7 +540,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Buy Now</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Smart%20Shield%20Plus.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Buy Now</a>
                     <a href="#" class="btn-details">Learn More</a>
                 </div>
             </div>
@@ -576,7 +577,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Buy Now</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Smart%20Shield%20Premier.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Buy Now</a>
                     <a href="#" class="btn-details">Learn More</a>
                 </div>
             </div>
@@ -588,7 +590,8 @@
                     <span class="plan-code">111L144V01</span>
                 </div>
                 <div class="plan-content">
-                    <p class="plan-desc">Fulfills your child’s dreams proactively by creating a corpus for a secured
+                    <p class="plan-desc">Fulfills your child’s dreams proactively by creating a corpus for a
+                        secured
                         financial future through market linked returns.</p>
                     <div class="plan-features">
                         <div class="feature-item">
@@ -613,7 +616,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Buy Now</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Smart%20Scholar%20Plus.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Buy Now</a>
                     <a href="#" class="btn-details">Learn More</a>
                 </div>
             </div>
@@ -625,7 +629,8 @@
                     <span class="plan-code">111L135V02</span>
                 </div>
                 <div class="plan-content">
-                    <p class="plan-desc">Enables you to build the corpus you need to live comfortably in the second
+                    <p class="plan-desc">Enables you to build the corpus you need to live comfortably in the
+                        second
                         innings of your life with financial stability.</p>
                     <div class="plan-features">
                         <div class="feature-item">
@@ -650,7 +655,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Buy Now</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Retire%20Smart%20Plus.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Buy Now</a>
                     <a href="#" class="btn-details">Learn More</a>
                 </div>
             </div>
@@ -662,7 +668,8 @@
                     <span class="plan-code">111L147V01</span>
                 </div>
                 <div class="plan-content">
-                    <p class="plan-desc">Avail twin benefits of market linked returns on your invested money and the
+                    <p class="plan-desc">Avail twin benefits of market linked returns on your invested money and
+                        the
                         security of life cover with a simplified 3-step process.</p>
                     <div class="plan-features">
                         <div class="feature-item">
@@ -687,7 +694,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Buy Now</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20eWealth%20Plus.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Buy Now</a>
                     <a href="#" class="btn-details">Learn More</a>
                 </div>
             </div>
@@ -699,7 +707,8 @@
                     <span class="plan-code">111L146V01</span>
                 </div>
                 <div class="plan-content">
-                    <p class="plan-desc">Maximizes your savings through market-linked returns and features that empower
+                    <p class="plan-desc">Maximizes your savings through market-linked returns and features that
+                        empower
                         you with greater control over your portfolio.</p>
                     <div class="plan-features">
                         <div class="feature-item">
@@ -724,7 +733,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Buy Now</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Smart%20Elite%20Plus.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Buy Now</a>
                     <a href="#" class="btn-details">Learn More</a>
                 </div>
             </div>
@@ -736,7 +746,8 @@
                     <span class="plan-code">111N171V03</span>
                 </div>
                 <div class="plan-content">
-                    <p class="plan-desc">Protect your future financially with regular guaranteed benefits and the
+                    <p class="plan-desc">Protect your future financially with regular guaranteed benefits and
+                        the
                         confidence to fulfill promises to loved ones.</p>
                     <div class="plan-features">
                         <div class="feature-item">
@@ -760,7 +771,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Buy Now</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Smart%20Platina%20Supreme.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Buy Now</a>
                     <a href="#" class="btn-details">Learn More</a>
                 </div>
             </div>
@@ -772,7 +784,8 @@
                     <span class="plan-code">111N133V06</span>
                 </div>
                 <div class="plan-content">
-                    <p class="plan-desc">Provides a regular guaranteed long term income so that you can go ahead and
+                    <p class="plan-desc">Provides a regular guaranteed long term income so that you can go ahead
+                        and
                         live every moment of life with extra happiness.</p>
                     <div class="plan-features">
                         <div class="feature-item">
@@ -796,7 +809,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Buy Now</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Smart%20Platina%20Plus.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Buy Now</a>
                     <a href="#" class="btn-details">Learn More</a>
                 </div>
             </div>
@@ -808,7 +822,8 @@
                     <span class="plan-code">111N134V10</span>
                 </div>
                 <div class="plan-content">
-                    <p class="plan-desc">A stress-free retirement plan with regular guaranteed income options including
+                    <p class="plan-desc">A stress-free retirement plan with regular guaranteed income options
+                        including
                         immediate and deferred lifetime annuity.</p>
                     <div class="plan-features">
                         <div class="feature-item">
@@ -833,7 +848,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Buy Now</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Smart%20Annuity%20Plus.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Buy Now</a>
                     <a href="#" class="btn-details">Learn More</a>
                 </div>
             </div>
@@ -845,7 +861,8 @@
                     <span class="plan-code">111L142V01</span>
                 </div>
                 <div class="plan-content">
-                    <p class="plan-desc">Avail the benefit of life coverage and enhanced wealth creation opportunity
+                    <p class="plan-desc">Avail the benefit of life coverage and enhanced wealth creation
+                        opportunity
                         through market-linked returns and guaranteed additions.</p>
                     <div class="plan-features">
                         <div class="feature-item">
@@ -869,7 +886,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Buy Now</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Smart%20Fortune%20Builder.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Buy Now</a>
                     <a href="#" class="btn-details">Learn More</a>
                 </div>
             </div>
@@ -881,7 +899,8 @@
                     <span class="plan-code">111N140V02</span>
                 </div>
                 <div class="plan-content">
-                    <p class="plan-desc">Provides life cover at affordable premiums and returns total premium paid at
+                    <p class="plan-desc">Provides life cover at affordable premiums and returns total premium
+                        paid at
                         the end of the policy term upon survival.</p>
                     <div class="plan-features">
                         <div class="feature-item">
@@ -906,7 +925,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Buy Now</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Smart%20Swadhan%20Supreme.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Buy Now</a>
                     <a href="#" class="btn-details">Learn More</a>
                 </div>
             </div>
@@ -918,7 +938,8 @@
                     <span class="plan-code">111N128V02</span>
                 </div>
                 <div class="plan-content">
-                    <p class="plan-desc">A standard term plan ensuring that your family is financially protected in case
+                    <p class="plan-desc">A standard term plan ensuring that your family is financially protected
+                        in case
                         of unforeseen circumstances at an affordable cost.</p>
                     <div class="plan-features">
                         <div class="feature-item">
@@ -943,7 +964,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Buy Now</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Saral%20Jeevan%20Bima.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Buy Now</a>
                     <a href="#" class="btn-details">Learn More</a>
                 </div>
             </div>
@@ -955,7 +977,8 @@
                     <span class="plan-code">111N170V01</span>
                 </div>
                 <div class="plan-content">
-                    <p class="plan-desc">An Individual savings product with two benefit options: Life or Life Plus with
+                    <p class="plan-desc">An Individual savings product with two benefit options: Life or Life
+                        Plus with
                         in-built accidental disability benefits.</p>
                     <div class="plan-features">
                         <div class="feature-item">
@@ -980,7 +1003,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Buy Now</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Smart%20Bachat%20Plus.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Buy Now</a>
                     <a href="#" class="btn-details">Learn More</a>
                 </div>
             </div>
