--- a/protection-plans.html
+++ b/protection-plans.html
@@ -540,7 +540,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Continue Your Application</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Smart%20Shield%20Plus.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Continue Your Application</a>
                 </div>
             </div>
 
@@ -575,7 +576,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Continue Your Application</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Smart%20Shield%20Premier.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Continue Your Application</a>
                 </div>
             </div>
 
@@ -611,7 +613,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Continue Your Application</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Saral%20Jeevan%20Bima.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Continue Your Application</a>
                 </div>
             </div>
 
@@ -647,7 +650,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Continue Your Application</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Smart%20Swadhan%20Supreme.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Continue Your Application</a>
                 </div>
             </div>
 
@@ -683,7 +687,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Buy Now</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20eShield%20Insta.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Buy Now</a>
                 </div>
             </div>
 
@@ -719,7 +724,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Continue Your Application</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Smart%20Swadhan%20Neo.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Continue Your Application</a>
                 </div>
             </div>
 
@@ -755,7 +761,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Continue Your Application</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Saral%20Swadhan%20Supreme.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Continue Your Application</a>
                 </div>
             </div>
         </div>
