--- a/corporate-solutions-plans.html
+++ b/corporate-solutions-plans.html
@@ -540,7 +540,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Continue Your Application</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Kalyan%20ULIP%20Plus.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Continue Your Application</a>
                 </div>
             </div>
 
@@ -576,7 +577,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Continue Your Application</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Pradhan%20Mantri%20Jeevan%20Jyoti%20Bima%20Yojana.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Continue Your Application</a>
                 </div>
             </div>
 
@@ -612,7 +614,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Continue Your Application</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20CapAssure%20Gold.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Continue Your Application</a>
                 </div>
             </div>
 
@@ -648,7 +651,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Continue Your Application</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Sampoorn%20Suraksha.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Continue Your Application</a>
                 </div>
             </div>
 
@@ -684,7 +688,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Continue Your Application</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Swarna%20Jeevan%20Plus.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Continue Your Application</a>
                 </div>
             </div>
         </div>
