--- a/group-micro-plans.html
+++ b/group-micro-plans.html
@@ -541,7 +541,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Continue Your Application</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Group%20Micro%20Shield.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Continue Your Application</a>
                 </div>
             </div>
 
@@ -577,7 +578,8 @@
                     </div>
                 </div>
                 <div class="plan-footer">
-                    <a href="#" class="btn-buy">Continue Your Application</a>
+                    <a href="https://wa.me/919688012707?text=Hello%2C%20I%20am%20interested%20in%20SBI%20Life%20-%20Group%20Micro%20Shield%20-%20SP.%20Please%20provide%20more%20details."
+                        class="btn-buy" target="_blank">Continue Your Application</a>
                 </div>
             </div>
         </div>
