--- a/insurance.html
+++ b/insurance.html
@@ -245,18 +245,56 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            text-align: center;
             color: var(--white);
             padding: 4rem 5%;
         }
 
-        .hero-content {
-            max-width: 900px;
-            animation: fadeInUp 1s ease-out;
+        .hero-overlay {
+            width: 100%;
+            max-width: 1200px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 40px;
+            text-align: left;
+        }
+
+        .hero-text-content {
+            flex: 1;
+            max-width: 600px;
+        }
+
+        .hero-image-content {
+            flex: 1;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+        }
+
+        .contact-card {
+            max-width: 500px;
+            width: 100%;
+            border-radius: 20px;
+            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
+            animation: fadeInRight 1s ease-out;
+            border: 2px solid rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(5px);
+        }
+
+        @keyframes fadeInRight {
+            from {
+                opacity: 0;
+                transform: translateX(50px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
         }
 
         .hero h1 {
-            font-size: clamp(2rem, 5vw, 4rem);
+            font-size: clamp(2.5rem, 5vw, 4rem);
             margin-bottom: 1.5rem;
             font-weight: 700;
             line-height: 1.1;
@@ -267,6 +305,22 @@
             margin-bottom: 2.5rem;
             color: #cbd5e1;
             font-family: 'Hind Madurai', sans-serif;
+        }
+
+        @media (max-width: 1024px) {
+            .hero-overlay {
+                flex-direction: column;
+                text-align: center;
+                gap: 30px;
+            }
+
+            .hero-image-content {
+                justify-content: center;
+            }
+
+            .contact-card {
+                max-width: 400px;
+            }
         }
 
         .hero-ofer-badge {
@@ -828,10 +882,15 @@
     </header>
 
     <section class="hero" id="home">
-        <div class="hero-content">
-            <h1 style="font-size: clamp(2rem, 5vw, 3rem); margin-bottom: 1rem;">SBI Life Insurance Services</h1>
-            <p>Trust. Transparency. Togetherness. Comprehensive Life Insurance and Investment Solutions.</p>
-            <a href="#categories" class="btn">Explore Plan Categories</a>
+        <div class="hero-overlay">
+            <div class="hero-text-content">
+                <h1 style="font-size: clamp(2rem, 5vw, 3rem); margin-bottom: 1rem;">SBI Life Insurance Services</h1>
+                <p>Trust. Transparency. Togetherness. Comprehensive Life Insurance and Investment Solutions.</p>
+                <a href="#categories" class="btn">Explore Plan Categories</a>
+            </div>
+            <div class="hero-image-content">
+                <img src="assets/contact-card.png" alt="Get in Touch" class="contact-card">
+            </div>
         </div>
     </section>
 
