Add Gallery page and update navigation

--- a/builders.html
+++ b/builders.html
@@ -751,6 +751,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#services">Services</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><button class="btn-enquire" onclick="openEnquiryModal()">Enquire Now</button></li>
             </ul>
