--- a/insurance.html
+++ b/insurance.html
@@ -875,6 +875,7 @@
                         </div>
                     </div>
                 </li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><button class="btn-enquire" onclick="openEnquiryModal()">Get Quote</button></li>
             </ul>
